# kazoe

./: Cargo.toml  kazoe.nix  shell.nix
nix/: rust.nix  sources.json
src/: main.rs
virt-exp/: native-libgit-rust  native-walk-rust-objects  syscalls-native-libgit-rust-first  syscalls-native-libgit-rust-second  syscalls-native-walk-rust-objects-first  syscalls-native-walk-rust-objects-second  syscalls-virt-libgit-rust-first  syscalls-virt-libgit-rust-second  syscalls-virt-walk-rust-objects-first  syscalls-virt-walk-rust-objects-second  virt-libgit-rust  virt-walk-rust-objects
