[package]
name = "kazoe"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gumdrop = "0.8.0"
walkdir = "2.3.1"
flate2 = "1.0.14"
log = "0.4.8"
env_logger = "0.7.1"
git2 = { version = "0.13.6", default-features = false }
